redis added to service layer and storage, comment logic done
