# api/router.go
@@ -31,6 +31,7 @@ func New(services service.IServiceManager, log logger.ILogger) *gin.Engine {
 	{
 		// auth endpoints
 		r.POST("/auth/customer/login", h.CustomerLogin)
+		r.POST("/auth/admin/login", h.AdminLogin)
 
 		// user endpoints
 		r.POST("/user", h.CreateUser)
